manifests/core/apps/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: core
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis-data-vol
          persistentVolumeClaim:
            claimName: redis-data-pvc
      containers:
        - name: redis
          image: redis:latest
          args: ["--requirepass", $(REDIS_PASSWORD)]
          ports:
            - containerPort: 6379
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
            requests:
              memory: 256Mi
              cpu: 150m
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            exec:
              command:
                - redis-cli
                - -a
                - $${REDIS_PASSWORD}
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - redis-cli
                - -a
                - $${REDIS_PASSWORD}
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: redis-data-vol
              mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
